# Omega

./: .gitignore  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci-cd.yml
app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
app/api/consciousness/: route.ts
app/components/: AddendumBValidation.tsx  AudioControls.tsx  DistanceHeatmap.tsx  EigenvalueSpectrum.tsx
app/components/layout/: Footer.tsx
app/components/spectral/: AddendumBValidation.tsx  DistanceHeatmap.tsx  MdsEmbedding3D.tsx  TransitionMatrixEditor.tsx
app/console/: page.tsx
app/docs/: page.tsx
app/hooks/: useSpectralTriple.ts
app/lib/: useSpectralTriple.ts
app/lib/audio/: sound-engine.ts
app/lib/websocket/: useWebSocket.ts
app/research/: page.tsx
app/spectral/: page.tsx
app/spectral-wasm/: page.tsx
app/spectral/lib/: eigen.ts  spectral-triple.ts
app/trilogic/: page.tsx
app/utils/: mds.ts
components/: accretion-disk-visualization.tsx
components/entrance/: BlackHoleEntrance.jsx
connes_distance/: Cargo.toml  README.md
connes_distance/benches/: connes_bench.rs
connes_distance/src/: lib.rs  spectral.rs
connes_distance/tests/: addendum_b.rs
connes_distance_wasm/: Cargo.toml
connes_distance_wasm/src/: lib.rs
hooks/: useMetricState.js
lib/: noop.js
lib/types/: provider.ts
public/wasm/: connes_distance_wasm.d.ts  connes_distance_wasm.js  connes_distance_wasm_bg.wasm  connes_distance_wasm_bg.wasm.d.ts  package.json
trivector-ai/: package-lock.json  package.json
(+12 files in other folders)
