[package]
name = "connes_distance"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Connes distance for finite spectral triples from Markov chains"

[dependencies]
nalgebra = "0.32"
thiserror = "1.0"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
