[package]
name = "connes_distance_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
connes_distance = { path = "../connes_distance" }
nalgebra = "0.32"
getrandom = { version = "0.2", features = ["js"] }
